# opencc-fmmseg-wasm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  package.json
dicts/: STCharacters.txt  STPhrases.txt  STPunctuations.txt  TSCharacters.txt  TSPhrases.txt  TWPhrases.txt  dictionary_maxlength.cbor
examples/: custom_dicts.html  index.html  test_wasm_custom_dicts.js
scripts/: apply_package_template.ps1  package.template.json  prepare-npm.ps1  test-opencc.ps1
src/: converter.rs  lib.rs
templates/: package.template.json
tests/: test_wasm_custom_dicts.js  test_wasm_normalize_compat.js
