[workspace]
members = ["vendor/opencc-fmmseg/tools/dict-generate"]

[package]
name = "opencc-fmmseg-wasm"
version = "0.2.3"
edition = "2024"
description = "WebAssembly bindings for opencc-fmmseg, a high-performance OpenCC-compatible Simplified/Traditional Chinese converter."
repository = "https://github.com/laisuk/opencc-fmmseg-wasm"
license = "MIT"
keywords = [
    "opencc",
    "chinese",
    "wasm",
    "webassembly",
    "conversion",
]

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
opencc-fmmseg = { path = "vendor/opencc-fmmseg", default-features = false }
zip = { version = "=3.0", default-features = false, features = ["deflate"] }
regex = "1.12.3"

# Default: heavy optimization for libraries (C API performance)

[profile.release]
opt-level = 3              # Maximize speed (better suited for C API performance)
codegen-units = 1          # Optimize across the entire codebase for better performance
lto = "fat"                # Full Link Time Optimization for improved binary performance
panic = "abort"            # Prevents Rust panics from unwinding, reducing binary size
incremental = false        # Disable incremental builds to fully optimize the release binary
#strip = "symbols"          # Strips debug symbols while retaining export symbols needed for the C API
debug = 0                  # No debug info in the final binary to reduce size
